@@ -1,3 +1,8 @@
+2009-04-07  Dominique Dumont  <dominique.dumont@hp.com> unreleased v1.208
+
+	* lib/Config/Model/Tk/HashEditor.pm (Populate): Improved widget
+	ergonomy. Added some balloon help.
+
 2009-03-31  Dominique Dumont  <dominique.dumont@hp.com> unreleased
 
 	* lib/Config/Model/Tk/*.pm (): Added display of summary 
